--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,15 +1,9 @@
 FROM jenkins/jenkins:lts-jdk11
+USER root
 RUN apt-get update && \
-    apt-get install -y groovy && \
-    apt-get install -y \
-        python3 \
-        python3-pip \
-        python3-setuptools \
-        groff \
-        less \
-    && pip3 install --upgrade pip \
-    && apt-get clean
-RUN pip3 --no-cache-dir install --upgrade awscli
+    apt-get install -y python3 && \
+    apt-get install -y awscli && \
+    apt-get install -y groovy
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
 ENV CASC_JENKINS_CONFIG /var/jenkins_home/casc.yaml
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
