--- a/cfts/jenkins-docker.yaml
+++ b/cfts/jenkins-docker.yaml
@@ -30,7 +30,7 @@ Parameters:
     NoEcho: true
 
 Resources:  
-  rRole:
+  rS3AccessRole:
     Type: 'AWS::IAM::Role'
     Properties:
       AssumeRolePolicyDocument:
@@ -38,13 +38,10 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              Service:
-                - ec2.amazonaws.com
+              AWS: !GetAtt rRole.Arn
             Action:
               - 'sts:AssumeRole'
       Path: /
-      ManagedPolicyArns: 
-        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
       Policies:
         - PolicyName: S3_Bucket_Policy
           PolicyDocument:
@@ -67,7 +64,23 @@ Resources:
                   - 's3:PutObjectTagging'
                   - 's3:DeleteObject'
                   - 's3:DeleteBucket'
-                Resource: '*'
+                Resource: '*'  
+  rRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      Path: /
+      ManagedPolicyArns: 
+        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
+      Policies:
         - PolicyName: SNS_Bucket_Policy
           PolicyDocument:
             Version: 2012-10-17
